--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,42 +2,69 @@
 <html>
 <head>
     <title>Chat with AI</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <style>
+        body {
+            background-color: #f5f5f5;
+        }
+
+        .container {
+            max-width: 2000px;
+        }
+
+        .list-group-item {
+            word-wrap: break-word;
+        }
+
+        .chat-message {
+            font-size: 1.2em;
+            margin-bottom: 0.5em;
+        }
+    </style>
 </head>
-<body>
-<form id="chat-form">
-    <label for="question">Ask a question:</label><br>
-    <input type="text" id="question" name="question"><br>
-    <input type="submit" value="Submit">
-</form>
-<h2>Chat History</h2>
-<ul id="chat-history"></ul>
+<body class="container">
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h1 class="text-center my-4">Chat with AI</h1>
+        <form id="chat-form">
+            <div class="form-group">
+                <label for="question">Ask a question:</label>
+                <input type="text" id="question" name="question" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <h2 class="my-4">Chat History</h2>
+        <ul id="chat-history" class="list-group"></ul>
+    </div>
+</div>
 
 <script>
-    var source;
-    var timer;
+    let source;
+    let timer;
 
-    $("#chat-form").on("submit", function(event) {
+    $("#chat-form").on("submit", function (event) {
         event.preventDefault();
 
         var question = $("#question").val();
         $("#question").val("").prop("disabled", true);
+
+        // Append the question to the chat history
+        $("#chat-history").append("<li class='list-group-item'><strong>" + question + "</strong></li>");
 
         if (source) {
             source.close();
         }
 
         source = new EventSource('v1/laws/chat-stream?question=' + question);
-        source.onmessage = function(event) {
-            clearTimeout(timer);  // clear the previous timer
+        source.onmessage = function (event) {
+            clearTimeout(timer);
             $("#chat-history").append(event.data + " ");
-            timer = setTimeout(function() {  // set a new timer
-                $("#chat-history").append("<br>");  // add a new line
-            }, 3000);  // after 3 seconds
-            $("#question").prop("disabled", false);
-        };
-        source.onerror = function(event) {
-            $("#chat-history").append(event);
+
+
+            timer = setTimeout(function () {
+                $("#chat-history").append("<hr>");
+            }, 3000);
             $("#question").prop("disabled", false);
         };
     });
